# e2e-data-validation

./: .gitignore  LICENSE  Proto3_Parquet_Compatibility.md  QUICKSTART.md  README.md  pyproject.toml
datasets/basic_types/: basic_types.json  basic_types.proto
datasets/complex_nested/: complex_nested.json  complex_nested.proto
datasets/enums/: enums.json  enums.proto
datasets/maps/: maps.json  maps.proto
datasets/nested_messages/: nested_messages.json  nested_messages.proto
datasets/oneof/: oneof.json  oneof.proto
datasets/optional_fields/: optional_fields.json  optional_fields.proto
datasets/repeated_fields/: repeated_fields.json  repeated_fields.proto
docs/: Data_Format_Compatibility_Analysis.md  Proto3_Parquet_Compatibility.md  QUICKSTART.md  README.md  Results.md  Results_and_Analysis.md  basic_types.md  codebase.md  common_pitfalls.md  common_pitfalls_and_conversion_bugs.md  compatibility_analysis.md  enums.md  java_considerations.md  oneof.md  proto3_vs_parquet.md  recommendations.md  results.md
docs/datasets/: basic_types.md  complex_nested.md  enums.md  maps.md  nested_messages.md  oneof.md  optional_fields.md  repeated_fields.md
notebooks/: e2e_conversion_validator.ipynb  pipeline.ipynb
src/: __init__.py  converter.py  generator.py  schema_inference.py  validator.py
