[project]
name = "e2e-data-validation"
version = "0.1.0"
description = "End-to-end data validation for PB3 to Parquet conversions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=4.25.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
